k8s/apps/keycloak/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
  labels:
    istio.io/dataplane-mode: ambient
